// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Employee List component Modal and confirmation initializes to false 1`] = `
"<div class=\\"employees-list\\">
  <!---->
  <!---->
</div>"
`;

exports[`Testing Employee List component prop users return a array of users 1`] = `
"<div class=\\"employees-list\\">
  <div class=\\"each-employee\\">
    <h3> alice@gmail.com </h3>
    <h3 class=\\"employee-role\\"> Admin </h3> <button class=\\"edit-employee-btn\\"></button> <button class=\\"delete-employee-btn\\"></button>
  </div>
  <div class=\\"each-employee\\">
    <h3> michelle@gmail.com </h3>
    <h3 class=\\"employee-role\\"> User </h3> <button class=\\"edit-employee-btn\\"></button> <button class=\\"delete-employee-btn\\"></button>
  </div>
  <!---->
  <!---->
</div>"
`;
